use proper glossary terms for stats

--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -109,7 +109,7 @@ The objectives of this chapter are to:
 <!-- acr report using unfiltered controls -->
 This \gls{gwas} was performed using the interim data release from the UK Biobank (approval number 12611) downloaded November 2015. There was genetic information for `r formatC(NROW(fam), big.mark = ',', big.interval = 3, digits = 0)` individuals. For the \gls{gwas} itself, it was limited to be only people who had self-reported an ethnic background of British, Irish, or 'any other white background' to limit the effect of genetic ancestry confounding the analysis.
 
-Inclusion criteria were: European ethnicity, aged between 40 and 69 years, and having genome wide genotypes available. The exclusion criteria used were: mismatch between self-reported sex and genetic sex, genotype quality control failure, relatedness, or either a primary or secondary hospital diagnosis of kidney disease (International Classification of Diseases, Tenth Revision (ICD-10), codes I12, I13, N00-N05, N07, N11, N14, N17–N19, Q61, N25.0, Z49, Z94.0, Z99.2), participants aged 70 years and over, and those with kidney disease, because these are risk factors for secondary gout.
+Inclusion criteria were: European ethnicity, aged between 40 and 69 years, and having genome wide genotypes available. The exclusion criteria used were: mismatch between self-reported sex and genetic sex, genotype quality control failure, relatedness, or either a primary or secondary hospital diagnosis of kidney disease (\gls{icd10}, codes I12, I13, N00-N05, N07, N11, N14, N17–N19, Q61, N25.0, Z49, Z94.0, Z99.2), participants aged 70 years and over, and those with kidney disease, because these are risk factors for secondary gout.
 
 Individuals from the UK Biobank cohort were genotyped on an Axiom array with 820,967 markers (Affymetrix, Santa Clara, CA, USA). The genotypes were phased using SHAPEIT3, and then imputed using IMPUTE2 with both the UK10K impute reference panel^[https://www.uk10k.org], and the haplotype reference consortium impute panel [@McCarthy2016], to bring the total number of \glspl{snp} to approximately 73.3 million. Genotyping, phasing, and imputation were performed by the UK Biobank.
 
@@ -123,7 +123,7 @@ A replication cohort was created from the full UK Biobank genetic dataset by usi
 
 #### Gout definitions
 
-Four main classification criteria were used to define gout cases. _Hospital defined gout_ involved either a primary or secondary hospital diagnosis for gout (ICD-10 code M10, including sub-codes). _Self-report of gout_ was defined as reporting having gout at the time of the study interview with a nurse, in response to the question "In the touch screen you selected that you have been told by a doctor that you have other serious illnesses or disabilities, could you now tell me what they are?"^[http://biobank.ctsu.ox.ac.uk/crystal/docs/Interview.pdf accessed 28 May 2018]. _Use of \gls{ult}_ used self-report data for the use of allopurinol, febuxostat, or sulphinpyrazone, and not having a hospital diagnosis of leukaemia or lymphoma (ICD-10 codes C81-C96). _Winnard defined gout_ was based on @Winnard2012 and consisted of a hospital diagnosis of gout, or self-report of gout specific medication (\gls{ult} or colchicine). The largest number of people were classified through either self-report or the use of urate lowering therapy (Figure \@ref(fig:ukbbupsetplot)). Additional exclusion criteria were applied to participants not classified as having gout from these definitions in order to remove possible cases from the control cohort. The criteria were cortico-steroidal use, non-steroidal anti-inflammatory drug use or probenecid use. The UK Biobank replication cohort used the gout definition of self-reported gout or self-reported \gls{ult} use to define cases.
+Four main classification criteria were used to define gout cases. _Hospital defined gout_ involved either a primary or secondary hospital diagnosis for gout (\gls{icd10} code M10, including sub-codes). _Self-report of gout_ was defined as reporting having gout at the time of the study interview with a nurse, in response to the question "In the touch screen you selected that you have been told by a doctor that you have other serious illnesses or disabilities, could you now tell me what they are?"^[http://biobank.ctsu.ox.ac.uk/crystal/docs/Interview.pdf accessed 28 May 2018]. _Use of \gls{ult}_ used self-report data for the use of allopurinol, febuxostat, or sulphinpyrazone, and not having a hospital diagnosis of leukaemia or lymphoma (\gls{icd10} codes C81-C96). _Winnard defined gout_ was based on @Winnard2012 and consisted of a hospital diagnosis of gout, or self-report of gout specific medication (\gls{ult} or colchicine). The largest number of people were classified through either self-report or the use of urate lowering therapy (Figure \@ref(fig:ukbbupsetplot)). Additional exclusion criteria were applied to participants not classified as having gout from these definitions in order to remove possible cases from the control cohort. The criteria were cortico-steroidal use, non-steroidal anti-inflammatory drug use or probenecid use. The UK Biobank replication cohort used the gout definition of self-reported gout or self-reported \gls{ult} use to define cases.
 
 Confidence intervals for proportions of each gout definition out of the combination of all gout definitions were calculated using the \texttt{prop.test} function from the _stats_ package in R.
 
@@ -185,7 +185,7 @@ A \gls{gwas} was performed using logistic regression in Plink1.9b [@plink2; @Cha
 
 #### Heritability
 
-For each gout classification, the genetic component of heritability explained was calculated. This was done by first randomly selecting 10,000 controls and then combining this same subset with cases from each of the gout classifications. The genetic variance was calculated for each chromosome separately and then combined. The dichotomous case-control phenotype was transformed onto a continuous liability scale using the restricted maximum likelihood analysis function in the GCTA software (v1.26.0, @Yang2011part) and a general population prevalence of gout of 2% (section \@ref(gctaHeritability)). The liability scale operates on a liability threshold model whereby an unseen continuous trait has a threshold above which one is a case [@Lee2011; @Zuk2012]. Heritability estimates were compared using the formula h~1~ - h~2~ and the SE calculated using formula \@ref(eq:h2se).
+For each gout classification, the genetic component of heritability explained was calculated. This was done by first randomly selecting 10,000 controls and then combining this same subset with cases from each of the gout classifications. The genetic variance was calculated for each chromosome separately and then combined. The dichotomous case-control phenotype was transformed onto a continuous liability scale using the restricted maximum likelihood analysis function in the GCTA software (v1.26.0, @Yang2011part) and a general population prevalence of gout of 2% (section \@ref(gctaHeritability)). The liability scale operates on a liability threshold model whereby an unseen continuous trait has a threshold above which one is a case [@Lee2011; @Zuk2012]. Heritability estimates were compared using the formula h~1~ - h~2~ and the \gls{se} calculated using formula \@ref(eq:h2se).
 
 
 \begin{equation} 
@@ -288,7 +288,7 @@ kot_bim <- read_delim('data/Ukbiobank/kottgen_ukbb_alleles.txt', col_names = c("
 uk_kot_psig <- uk_kot_t1 %>% select(-file, -TEST, -SE, -NMISS,-STAT, -POS) %>% mutate(P_bac = P) %>% mutate(P = purrr::map_chr(P, ~ format_p_md(p = .x, format = 'latex'))) %>% arrange(P) %>% select(-grail_gene, -OR, -CHR) %>%group_by(gout) %>% mutate(P_sig = P_bac < (0.05/NROW(.)), P_gw = P_bac < 5e-8 ) %>% summarise( P_gw = sum(P_gw),P_exp = sum(P_sig)) %>% filter(gout != 'all')%>% gather("sig", "value",2:3) %>% spread(gout, value) %>% rename("SNP" = sig) %>% mutate_all(as.character) %>% mutate(A1 = "", REF ="",ALT ="")
 ```
 
-Analysis of the 30 reported urate-associated \glspl{snp} from @Kottgen2013 revealed similar odds ratios for all gout definitions (Figures \@ref(fig:kotplot) and \@ref(fig:kotplot2), Table \@ref(tab:ukbbkot)). Experiment-wide significance was defined as P < `r as.character(signif(0.05/30,2))`, and genome-wide significance as P < 5x10^-8^ [@Fadista2016]. There were differing numbers of \glspl{snp} that had a significant association with gout, both at genome- and the experiment-wide thresholds between the gout definitions used. Meeting genome-wide significance, there were five \glspl{snp} (one in each of _ABCG2_, _GCKR_, _SLC17A3_, _SLC22A12_, and _SLC2A9_) for both the self-reported gout or \gls{ult} usage definition and the self-reported gout definition, four \glspl{snp} (_ABCG2_, _GCKR_, _SLC22A12_, and _SLC2A9_) for the \gls{ult} usage definition, three \glspl{snp} (_ABCG2_, _GCKR_, and _SLC2A9_) for the Winnard definition, and two \glspl{snp} (_ABCG2_ and _SLC2A9_) for the hospital diagnosis definition. For all definitions, the effect size and strength of association was larger for _ABCG2_ than _SLC2A9_. At the experiment-wide significance threshold, there were 13 \glspl{snp} for the self-reported gout or \gls{ult} use definition, 12 \glspl{snp} for the self-reported gout definition, 11 for \gls{ult} use definition, 10 for the Winnard definition, and three \glspl{snp} for the hospital diagnosis definition.
+Analysis of the 30 reported urate-associated \glspl{snp} from @Kottgen2013 revealed similar \glspl{or} for all gout definitions (Figures \@ref(fig:kotplot) and \@ref(fig:kotplot2), Table \@ref(tab:ukbbkot)). Experiment-wide significance was defined as P < `r as.character(signif(0.05/30,2))`, and genome-wide significance as P < 5x10^-8^ [@Fadista2016]. There were differing numbers of \glspl{snp} that had a significant association with gout, both at genome- and the experiment-wide thresholds between the gout definitions used. Meeting genome-wide significance, there were five \glspl{snp} (one in each of _ABCG2_, _GCKR_, _SLC17A3_, _SLC22A12_, and _SLC2A9_) for both the self-reported gout or \gls{ult} usage definition and the self-reported gout definition, four \glspl{snp} (_ABCG2_, _GCKR_, _SLC22A12_, and _SLC2A9_) for the \gls{ult} usage definition, three \glspl{snp} (_ABCG2_, _GCKR_, and _SLC2A9_) for the Winnard definition, and two \glspl{snp} (_ABCG2_ and _SLC2A9_) for the hospital diagnosis definition. For all definitions, the effect size and strength of association was larger for _ABCG2_ than _SLC2A9_. At the experiment-wide significance threshold, there were 13 \glspl{snp} for the self-reported gout or \gls{ult} use definition, 12 \glspl{snp} for the self-reported gout definition, 11 for \gls{ult} use definition, 10 for the Winnard definition, and three \glspl{snp} for the hospital diagnosis definition.
 
 
 ```{r, nkotsig}
@@ -312,10 +312,10 @@ uk_kot_t1 %>%
               geom_point() + facet_wrap(~SNP) + geom_linerange(aes(x = gout, ymin = L95, ymax = U95)) +geom_hline(yintercept = 1) +theme_bw() + theme(axis.text.x = element_text(angle=-90, vjust = 0.5, hjust = 0)) + theme(axis.title = element_blank(), legend.position = 'none') + scale_color_manual(values = c("black","red")) 
 ```
 
-(ref:kotplot) Plot showing ORs (95% CI) for the two largest effect \glspl{snp} reported in @Kottgen2013 based on gout definitions, rs2231142 and rs12498742. Original Kottgen reported ORs are shown as red circles. The reported Kottgen OR was inverted to maintain consistency of reported effect allele (A1) for rs12498742.
+(ref:kotplot) Plot showing odds ratios (95% \acrshort{ci}) for the two largest effect \glspl{snp} reported in @Kottgen2013 based on gout definitions, rs2231142 and rs12498742. Original Kottgen reported odd ratio are shown as red circles. The reported Kottgen odds ratio was inverted to maintain consistency of reported effect allele (A1) for rs12498742.
 
 
-(ref:kotplot2) Plot showing ORs (95% CI) for the 28 \glspl{snp} reported in @Kottgen2013 based on gout definitions. Original Kottgen reported ORs are shown as red circles. The reported Kottgen OR was inverted to maintain consistency of reported effect allele (A1) for the following markers: rs2307394, rs2079742, rs7224610, rs7188445, rs1178977, rs6770152, rs7193778, rs164009, rs653178, rs2078267 and rs478607.
+(ref:kotplot2) Plot showing odds ratios (95% \acrshort{ci}) for the 28 \glspl{snp} reported in @Kottgen2013 based on gout definitions. Original Kottgen reported odds ratios are shown as red circles. The reported Kottgen odds ratio was inverted to maintain consistency of reported effect allele (A1) for the following markers: rs2307394, rs2079742, rs7224610, rs7188445, rs1178977, rs6770152, rs7193778, rs164009, rs653178, rs2078267 and rs478607.
 
 ```{r kotplot2, fig.height=7, fig.cap = '(ref:kotplot2)', warning = FALSE}
 
@@ -340,7 +340,7 @@ uk_kot_t1 %>%
 
 #### Heritability explained
 
-To see if there was a difference between gout classifications in the genetic component of the variance explained by an additive model in gout, heritability estimates were calculated for each gout classification. To do this, 10,000 controls were randomly selected and were used with each different gout criteria, and heritability estimates for each chromosome were calculated using GCTA 1.26.0 [@Yang2011part]. The heritability estimates were 0.289 (SE 0.034) for the self-report of gout or ULT use definition, 0.283 (SE 0.036) for the self-report of gout definition, 0.282 (SE 0.040) for the Winnard definition, 0.308 (SE 0.044) for the ULT use definition and 0.236 (SE 0.160) for the hospital diagnosis definition. There were no statistically significant differences between the heritability estimates for any of the different classifications. The heritability estimates for gout were similar to the estimates of genetic variance of serum urate previously reported [@Kottgen2013].
+To see if there was a difference between gout classifications in the genetic component of the variance explained by an additive model in gout, heritability estimates were calculated for each gout classification. To do this, 10,000 controls were randomly selected and were used with each different gout criteria, and heritability estimates for each chromosome were calculated using GCTA 1.26.0 [@Yang2011part]. The heritability estimates were 0.289 (\acrshort{se} 0.034) for the self-report of gout or \gls{ult} use definition, 0.283 (\acrshort{se} 0.036) for the self-report of gout definition, 0.282 (\acrshort{se} 0.040) for the Winnard definition, 0.308 (\acrshort{se} 0.044) for the \gls{ult} use definition and 0.236 (\acrshort{se} 0.160) for the hospital diagnosis definition. There were no statistically significant differences between the heritability estimates for any of the different classifications. The heritability estimates for gout were similar to the estimates of genetic variance of serum urate previously reported [@Kottgen2013].
 
 ```{r, message=FALSE}
 # still need to flip snps to be in the same order as kottgen
@@ -539,7 +539,7 @@ nearly_nom_snps <- polyGout %>% filter(-log10(P) > 4 & -log10(P) < 5) %>% pull(S
 #polyGout %>% filter(-log10(P) > 4 & -log10(P) < 5) %>% left_join(., nearly_nom_snps, by = c("SNP" = "Query"))
 ```
 
-The \gls{gwas} for gout in the Polynesian populations of New Zealand had a total of 2402 individuals, with a mean age of 48.6 (SD 14.9), was 60.5% male, and had a mean \gls{bmi} of 35.0 (SD 8.35). A break down by gout affection is shown in Table \@ref(tab:polyGwasclinc). There were only two markers that met the threshold for genome-wide significance, rs2725215 (risk allele = T, OR = 1.939, 95% CI = 1.567-2.40, P = 1.162 x 10^-9^), located in _PKD2_, and rs2231142 (risk allele = T, OR = 2.306, 95% CI =1.891-2.81, P = 1.570 x 10^-16^), located in _ABCG2_. The \gls{ld} r^2^ between these two markers was 0.58 (\gls{pol}). Two other markers reached the nominal significance threshold, rs2728108 (_ABCG2_) and rs11034401 (chr11 inter-genic). Other genes that had \glspl{snp} that were close to the nominal significance threshold, in the 10^-5^ < P < 10^-4^ range contained some previously associated genes/regions for urate and gout such as _SLC2A9_ and the region containing _IBSP_, _MEPE_, _PKD2_, and _ABCG2_, all on chromosome 4 (Figure \@ref(fig:polyManhat)). Of the 39 \glspl{snp} in the 10^-4^ > P > 10^-5^ range, only rs3775948 in _SLC2A9_, rs7698623, rs2725220 and, rs1871744 in _ABCG2_, rs6481407 in _BICC1_, and rs6041522 in _LOC105372532_, had associations of P < 0.05 in the UK Biobank gout \gls{gwas}, with only rs3775948 being genome-wide significant (P = 9 x 10^-43^).
+The \gls{gwas} for gout in the Polynesian populations of New Zealand had a total of 2402 individuals, with a mean age of 48.6 (\acrshort{sd} 14.9), was 60.5% male, and had a mean \gls{bmi} of 35.0 (\acrshort{sd} 8.35). A break down by gout affection is shown in Table \@ref(tab:polyGwasclinc). There were only two markers that met the threshold for genome-wide significance, rs2725215 (risk allele = T, \acrshort{or} = 1.939, 95% CI = 1.567-2.40, P = 1.162 x 10^-9^), located in _PKD2_, and rs2231142 (risk allele = T, \acrshort{or} = 2.306, 95% CI =1.891-2.81, P = 1.570 x 10^-16^), located in _ABCG2_. The \gls{ld} r^2^ between these two markers was 0.58 (\gls{pol}). Two other markers reached the nominal significance threshold, rs2728108 (_ABCG2_) and rs11034401 (chr11 inter-genic). Other genes that had \glspl{snp} that were close to the nominal significance threshold, in the 10^-5^ < P < 10^-4^ range contained some previously associated genes/regions for urate and gout such as _SLC2A9_ and the region containing _IBSP_, _MEPE_, _PKD2_, and _ABCG2_, all on chromosome 4 (Figure \@ref(fig:polyManhat)). Of the 39 \glspl{snp} in the 10^-4^ > P > 10^-5^ range, only rs3775948 in _SLC2A9_, rs7698623, rs2725220 and, rs1871744 in _ABCG2_, rs6481407 in _BICC1_, and rs6041522 in _LOC105372532_, had associations of P < 0.05 in the UK Biobank gout \gls{gwas}, with only rs3775948 being genome-wide significant (P = 9 x 10^-43^).
 
 <!-- > _LOC105376819 on chr1, PPP2R2C, LINC01331 on chr5, CHN2 on chr7, BICC1 on chr10, TRPC2 (chr11), LOC107984536 (chr12), DUSP6 , DCN, FARP1, LOC101928635, CA10, SLC39A11, ZNF543, LOC105372532, DEFB118, DEFB119_, and _PTPRT_ . This list of genes included the strongest effect loci for serum urate (_SLC2A9_ and _ABCG2_), but the majority of these loci have not previously been associated with gout or serum urate. -->
 
