Fixed italicisation and capitalisation

--- a/diseaseGR-12-3-2018-nourl.bib
+++ b/diseaseGR-12-3-2018-nourl.bib
@@ -1285,7 +1285,7 @@
 }
 
 @article{harley2008genome,
-  title = {{Genome-wide association scan in women with systemic lupus erythematosus identifies susceptibility variants in \emph{ITGAM}, \emph{PXK}, \emph{KIAA1542} and other loci},
+  title = {{Genome-wide association scan in women with systemic lupus erythematosus identifies susceptibility variants in \emph{ITGAM}, \emph{PXK}, \emph{KIAA1542} and other loci}},
   author = {John B Harley and Marta E Alarc{\a'o}n-Riquelme and Lindsey A Criswell and Chaim O Jacob and Robert P Kimberly and Kathy L Moser and Betty P Tsao and Timothy J Vyse and Carl D Langefeld and Swapan K Nath and Joel M Guthridge and Beth L Cobb and Daniel B Mirel and Miranda C Marion and Adrienne H Williams and Jasmin Divers and Wei Wang and Summer G Frank and Bahram Namjou and Stacey B Gabriel and Annette T Lee and Peter K Gregersen and Timothy W Behrens and Kimberly E Taylor and Michelle Fernando and Raphael Zidovetzki and Patrick M Gaffney and Jeffrey C Edberg and John D Rioux and Joshua O Ojwang and Judith A James and Joan T Merrill and Gary S Gilkeson and Michael F Seldin and Hong Yin and Emily C Baechler and Quan-Zhen Li and Edward K Wakeland and Gail R Bruner and Kenneth M Kaufman and Jennifer A Kelly},
   year = {2008},
   month = {Feb},
@@ -1299,7 +1299,7 @@
 }
 
 @article{hom2008association,
-  title = {{Association of systemic lupus erythematosus with \emph{C8orf13-BLK} and \emph{ITGAM-ITGAX}},
+  title = {{Association of systemic lupus erythematosus with \emph{C8orf13-BLK} and \emph{ITGAM-ITGAX}}},
   author = {Geoffrey Hom and Robert R Graham and Barmak Modrek and Kimberly E Taylor and Ward Ortmann and Sophie Garnier and Annette T Lee and Sharon A Chung and Ricardo C Ferreira and P V Krishna Pant and Dennis G Ballinger and Roman Kosoy and F Yesim Demirci and M Ilyas Kamboh and Amy H Kao and Chao Tian and Iva Gunnarsson and Anders A Bengtsson and Solbritt Rantap{\"a}{\"a}-Dahlqvist and Michelle Petri and Susan Manzi and Michael F Seldin and Lars R{\"o}nnblom and Ann-Christine Syv{\"a}nen and Lindsey A Criswell and Peter K Gregersen and Timothy W Behrens},
   year = {2008},
   month = {Feb},
@@ -1829,7 +1829,7 @@
 }
 
 @article{dejager2009meta,
-  title = {{Meta-analysis of genome scans and replication identify \emph{CD6}, \emph{IRF8} and \emph{TNFRSF1A} as new multiple sclerosis susceptibility loci},
+  title = {{Meta-analysis of genome scans and replication identify \emph{CD6}, \emph{IRF8} and \emph{TNFRSF1A} as new multiple sclerosis susceptibility loci}},
   author = {Philip L {De Jager} and Xiaoming Jia and Joanne Wang and Paul I W {de Bakker} and Linda Ottoboni and Neelum T Aggarwal and Laura Piccio and Soumya Raychaudhuri and Dong Tran and Cristin Aubin and Rebeccah Briskin and Susan Romano and Sergio E Baranzini and Jacob L McCauley and Margaret A Pericak-Vance and Jonathan L Haines and Rachel A Gibson and Yvonne Naeglin and Bernard Uitdehaag and Paul M Matthews and Ludwig Kappos and Chris Polman and Wendy L McArdle and David P Strachan and Denis Evans and Anne H Cross and Mark J Daly and Alastair Compston and Stephen J Sawcer and Howard L Weiner and Stephen L Hauser and David A Hafler and Jorge R Oksenberg},
   year = {2009},
   month = {Jul},
@@ -2552,7 +2552,7 @@
 }
 
 @article{negi2013genome,
-  title = {A genome-wide association study reveals \emph{ARL15}, a novel non-HLA susceptibility gene for rheumatoid arthritis in North Indians}},
+  title = {{A genome-wide association study reveals \emph{ARL15}, a novel non-HLA susceptibility gene for rheumatoid arthritis in North Indians}},
   author = {Sapna Negi and Garima Juyal and Sabyasachi Senapati and Pushplata Prasad and Aditi Gupta and Shalini Singh and Sujit Kashyap and Ashok Kumar and Uma Kumar and Rajiva Gupta and Satbir Kaur and Suraksha Agrawal and Amita Aggarwal and Jurg Ott and Sanjay Jain and Ramesh C Juyal and B K Thelma},
   year = {2013},
   month = {Dec},
@@ -3008,7 +3008,7 @@
 }
 
 @article{hirschfield2009primary,
-  title = {{Primary biliary cirrhosis associated with \emph{HLA}, \emph{IL12A}, and \emph{IL12RB2} variants},
+  title = {{Primary biliary cirrhosis associated with \emph{HLA}, \emph{IL12A}, and \emph{IL12RB2} variants}},
   author = {Gideon M Hirschfield and Xiangdong Liu and Chun Xu and Yue Lu and Gang Xie and Yan Lu and Xiangjun Gu and Erin J Walker and Kaiyan Jing and Brian D Juran and Andrew L Mason and Robert P Myers and Kevork M Peltekian and Cameron N Ghent and Catalina Coltescu and Elizabeth J Atkinson and E Jenny Heathcote and Konstantinos N Lazaridis and Christopher I Amos and Katherine A Siminovitch},
   year = {2009},
   month = {Jun},
@@ -3050,7 +3050,7 @@
 }
 
 @article{nelson2014abcc9,
-  title = {\emph{ABCC9} gene polymorphism is associated with hippocampal sclerosis of aging pathology}},
+  title = {{\emph{ABCC9} gene polymorphism is associated with hippocampal sclerosis of aging pathology}},
   author = {Peter T Nelson and Steven Estus and Erin L Abner and Ishita Parikh and Manasi Malik and Janna H Neltner and Eseosa Ighodaro and Wang-Xia Wang and Bernard R Wilfred and Li-San Wang and Walter A Kukull and Kannabiran Nandakumar and Mark L Farman and Wayne W Poon and Maria M Corrada and Claudia H Kawas and David H Cribbs and David A Bennett and Julie A Schneider and Eric B Larson and Paul K Crane and Otto Valladares and Frederick A Schmitt and Richard J Kryscio and Gregory A Jicha and Charles D Smith and Stephen W Scheff and Joshua A Sonnen and Jonathan L Haines and Margaret A Pericak-Vance and Richard Mayeux and Lindsay A Farrer and Linda J {Van Eldik} and Craig Horbinski and Robert C Green and Marla Gearing and Leonard W Poon and Patricia L Kramer and Randall L Woltjer and Thomas J Montine and Amanda B Partch and Alexander J Rajic and KatieRose Richmire and Sarah E Monsell and Gerard D Schellenberg and David W Fardo},
   year = {2014},
   journal = {Acta Neuropathologica},
@@ -3108,7 +3108,7 @@
   author = {F Yesim Demirci and Xingbin Wang and Jennifer A Kelly and David L Morris and M Michael Barmada and Eleanor Feingold and Amy H Kao and Kathy L Sivils and Sasha Bernatsky and Christian Pineau and Ann E Clarke and Rosalind Ramsey-Goldman and Timothy J Vyse and Patrick M Gaffney and Susan Manzi and M Ilyas Kamboh},
   year = {2016},
   month = {Jan},
-  journal = {Arthritis \& Rheumatology}},
+  journal = {{Arthritis \& Rheumatology}},
   volume = {68},
   number = {1},
   pages = {174-83},
