cleaned up glossary

--- a/glossary/glossary.tex
+++ b/glossary/glossary.tex
@@ -28,6 +28,12 @@
 	description={Zeng's \emph{E}}
 }
 
+\newacronym[description={International Classification of Diseases, Tenth Revision}]{icd10}{ICD-10}{International Classification of Diseases, Tenth Revision}
+\newacronym[description={standard error}]{se}{SE}{standard error}
+\newacronym[description={standard deviation}]{sd}{SD}{standard deviation}
+\newacronym[description={odds ratio}]{or}{OR}{odds ratio}
+\newacronym[description={confidence interval}]{ci}{CI}{confidence interval}
+
 
 \newacronym[description={derived allele frequency}]{daf}{DAF}{derived allele frequency}
 
@@ -79,7 +85,7 @@
 
 \newacronym[description={Hardy-Weinberg equilibrium}]{hwe}{HWE}{Hardy-Weinberg Equilibrium}
 \newacronym[description={minor allele frequency}]{maf}{MAF}{minor allele frequency}
-\newacronym[description={cross population extended haplotype homozygosity}]{xpehh}{XP-EHH}{cross population extended haplotype homozygosity}
+\newacronym[description={cross-population extended haplotype homozygosity}]{xpehh}{XP-EHH}{cross-population extended haplotype homozygosity}
 \newacronym[description={composite likelihood ratio}]{clr}{CLR}{composite likelihood ratio}
 %\newacronym[description={1000 Genomes Project European Super Population}]{eur}{EUR}{European}
 %\newacronym[description={1000 Genomes Project East Asian Super Population}]{eas}{EAS}{East Asian}
@@ -94,7 +100,7 @@
 
 \newacronym[description={Genome-wide Complex Trait Analysis}]{gcta}{GCTA}{Genome-wide Complex Trait Analysis}
 
-\newacronym[description={African Caribbeans in Barbados}]{acb}{ACB}{African Caribbeans in Barbados}
+\newacronym[description={African Caribbean in Barbados}]{acb}{ACB}{African Caribbean in Barbados}
 \newacronym[description={African Super Population}]{afr}{AFR}{African Super Population}
 \newacronym[description={American Super Population}]{amr}{AMR}{American Super Population}
 \newacronym[description={Americans of African Ancestry in SW USA}]{asw}{ASW}{Americans of African Ancestry in SW USA}
