int maj pt 7 - extra content on how a gwas is conducted

--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -243,7 +243,7 @@ In order to use haplotypic methods, (re)construction of haplotypes is required. 
 
 ## Improving GWAS
 
-\Gls{gwas} is a method to scan genomes, usually \gls{snp} genotype data, for association with a phenotype. The strength of \gls{gwas} is that prior knowledge of loci is not required and can be used as a tool for hypothesis generation. \Gls{gwas}, because of the large number of association tests, require large cohorts of samples to achieve sufficient power for statistical significance. As the effect size for a variant decreases, larger sample sizes are also needed, as power is proportional to the square of the effect size [@Korte2013; @Hemani2013]. Limitations in recruiting sufficient numbers of participants for \gls{gwas} therefore requires new ways of increasing power to detect smaller effects without needing to increase sample size, as outlined in this section. The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Ayodo2007; @Roeder2006]. When \gls{ld} between observed \glspl{snp} and causal variants is high, such as in the case of selection, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013].
+\Gls{gwas} is a method to scan genomes, usually \gls{snp} genotype data, for association with a phenotype. Association is usually tested between a trait and a single \gls{snp} using either linear regression (continuous variable) or logistic regression (binomial variable), with confounders included where possible as covariates to the models. These assocation tests are repeated for each \gls{snp} across the genome (for a comprehensive explanation of \gls{gwas} methods see @bush_chapter_2012). Commonly an additive model is used for the \gls{snp}. The strength of \gls{gwas} is that prior knowledge of loci is not required and can be used as a tool for hypothesis generation. \Gls{gwas}, because of the large number of association tests, require large cohorts of samples to achieve sufficient power for statistical significance. As the effect size for a variant decreases, larger sample sizes are also needed, as power is proportional to the square of the effect size [@Korte2013; @Hemani2013]. Limitations in recruiting sufficient numbers of participants for \gls{gwas} therefore requires new ways of increasing power to detect smaller effects without needing to increase sample size, as outlined in this section. The goal of being able to prioritise \gls{gwas} results by using additional information, such as incorporating \gls{ld} or selection statistics by using a weighting system to increase the power of a \gls{gwas}, has been suggested [@Ayodo2007; @Roeder2006]. When \gls{ld} between observed \glspl{snp} and causal variants is high, such as in the case of selection, greater power in \gls{gwas} can be achieved by focusing on searching for non-additive variance [@Hemani2013].
 
 The basis of \gls{gwas} studies is to identify \glspl{snp} that are associated with differences in the mean of a trait. These studies do not necessarily identify the causal \gls{snp} but instead identify a marker for the causal variant, usually in \gls{ld}. @Fisher1919 showed that total genetic variance could be split into components of additive, dominance and epistatic effects. The additive component has been shown to contribute the most to the overall genetic variance, with epistatic variance contributing little in an outbred population [@Hill2008]. Complex traits gain their complexity from being the sum of interactions from many small effect loci, or the product of non-additive interactions between loci and the environment, making it challenging to find the exact contribution of a locus to a trait [@Fu2013a]. These small, true effect loci can end up non-significant due to the noise in the data but might be  retrieved using methods that find non-additive effects. 
 
