explained more about why cell signalling was included.
included brief mechanism for malaria and urate

--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -3171,7 +3171,7 @@ There was no evidence of selection in either of the previously identified loci o
 
 No selection signal was observed at _CREBRF_ in any of the Polynesian populations that were tested. One reason for this is that the CoreExome \gls{snp} array did not have the specific variants (rs12513649 and rs373863828) reported in @Minster2016. Downstream from _CREBRF_ there was a consistent signal with what had been reported. This was only found in the Western Polynesian populations and the populations of the \gls{eas} super population, so suggests that had the dataset contained the variants then detection would have been possible. However, without the two markers reported in @Minster2016 it was unable to be determined if _CREBRF_ had evidence of selection from the CoreExome data.
 
-The pathway analysis of genes that were in the extremes for the different selection and neutrality statistics showed that pathways involved with cell signalling were the main results for the Polynesian populations, rather than metabolic pathways. The genes that indicated possible selection, even for obesity and \gls{t2d}, which are traditionally thought of as being the thrifty phenotype, were genes that were largely either neurological or involved in the immune system. \gls{nzm} did have significant results for two diabetes related pathways, "Type II diabetes mellitus_Homo sapiens_hsa04930" and "Insulin secretion_Homo sapiens_hsa04911", however, only up to 10% of the pathways had genes that met the significance thresholds. Of the genes that were part of those pathways, up to 50% were genes that encoded subunits of voltage-gated calcium channels. While some \gls{t2d}-associated individual loci show some signs of selection, it appears as if widespread selection is not the case. @Ayub2014c had a similar finding with respect to \gls{t2d}, where there was no support for the thrifty-gene hypothesis, testing across 65 \gls{t2d}-associated loci. 
+The pathway analysis of genes that were in the extremes for the different selection and neutrality statistics showed that pathways involved with cell signalling (and more general in nature) were the main results for the Polynesian populations, rather than metabolic pathways. If selection had been acting on the pathways involved with urate, gout and related conditions it would have been expected to see enrichment in genes involved with metabolic pathways. The genes that indicated possible selection, even for obesity and \gls{t2d}, which are traditionally thought of as being the thrifty phenotype, were genes that were largely either neurological or involved in the immune system. \gls{nzm} did have significant results for two diabetes related pathways, "Type II diabetes mellitus_Homo sapiens_hsa04930" and "Insulin secretion_Homo sapiens_hsa04911", however, only up to 10% of the pathways had genes that met the significance thresholds. Of the genes that were part of those pathways, up to 50% were genes that encoded subunits of voltage-gated calcium channels. While some \gls{t2d}-associated individual loci show some signs of selection, it appears as if widespread selection is not the case. @Ayub2014c had a similar finding with respect to \gls{t2d}, where there was no support for the thrifty-gene hypothesis, testing across 65 \gls{t2d}-associated loci. 
 
 As discussed in @Gosling2014, the thrifty-gene hypothesis in the context of the Pacific, where starvation during long voyages selected for thrifty-genes, does not fit with the anthropological history of Polynesian people, where they undertook planned voyages which settled the Pacific in a speedy manner. From the analysis results in this chapter, the thrifty-gene hypothesis appears to have none-to-minimal support from the loci that exhibit signals of possible selection. 
 
@@ -3195,7 +3195,7 @@ As discussed in @Gosling2014, the thrifty-gene hypothesis in the context of the 
 
 Malaria is endemic in the southwest Pacific, extending out to the east as far as Vanuatu, with evidence of genetic advantage against malaria of Austronesian speaking populations in Near Oceania [@Clark1993]. Malaria is absent, and always has been further west into Polynesia, Polynesian ancestors would have passed through Near Oceania prior to settlement of the Pacific [@Clark1993]. In Polynesia, even though malaria is absent, high frequencies of  $\alpha$-thalassaemia mutations (protective against malaria) have been identified in populations not exposed to malaria [@Hill1985]. Other malaria protective mutations, such as glucose-6-phosphate dehydrogenase deficiency and $\beta$-thalassaemia, are present in Pacific populations in higher frequencies, though generally in island groups where malaria remains extant [@Cappellini2008;@Flint1986].
 
-Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure, and as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. 
+Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure, and as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. This involves precipitated urate being released from ruptured infected erythrocytes, triggering an immune response [@GallegoDelgado2014;@orengo_uric_2009]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. 
 
 The blood antigen ABO has a higher susceptibility to malaria in the A, B, or AB antigen groups, than O [@Zerihun2011]. This has led to the formulation of a potential mechanism of cytoadherence through infected red blood cells expressing PfEMP-1 and binding to the A or B antigens on other red blood cells, enabling further infection [@Cserti2015]. There is an increasing gradient of A-type antigen from west to east in the Pacific, with populations in Melanesia having some of the lowest frequencies, whereas, within Polynesia, Western Polynesian populations have lower frequencies than Eastern Polynesian populations [@Simmons1962]. This could suggest that areas with endemic malaria have a maintained selective pressure against the A-type antigen.
 
